--- a/.github/workflows/docker-master.yaml
+++ b/.github/workflows/docker-master.yaml
@@ -1,10 +1,10 @@
 name: CI
 on:
   push:
-    branches: [master]
+    branches: [main]
     paths: [akuire/**, tests/**]
   pull_request:
-    branches: [master]
+    branches: [main]
     paths: akuire/**, tests/**]
 jobs:
   unittestists:
