--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,11 @@ koil = "^0.3.6"
 
 [tool.poetry.group.dev.dependencies]
 pytest-aiohttp = "^1.0.5"
+numpy = "^2.0.0"
+numba = "^0.60.0"
+scipy = "^1.13.1"
+opencv-python-headless = "^4.10.0.84"
+nanoimagingpack = "^2.1.3.dev1"
 
 [build-system]
 requires = ["poetry-core"]
