--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ numba = "^0.60.0"
 scipy = "^1.13.1"
 opencv-python-headless = "^4.10.0.84"
 nanoimagingpack = "^2.1.3.dev1"
+pytest-cov = "^5.0.0"
 
 [build-system]
 requires = ["poetry-core"]
