--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,15 @@ opencv-python-headless = "^4.10.0.84"
 nanoimagingpack = "^2.1.3.dev1"
 pytest-cov = "^5.0.0"
 
+[tool.poetry.scripts]
+akuire = "akuire.__main__:main"
+
+[tool.pytest.ini_options]
+markers = [
+    "composition: test composition",
+    "external: test external",
+]
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
